--- a/src/NodaMoney/project.json
+++ b/src/NodaMoney/project.json
@@ -1,10 +1,10 @@
 {
-  "version": "1.0.0-rc0005",
+  "version": "1.0.0-beta0000",
   "title": "NodaMoney",
   "description": "NodaMoney provides a library that treats Money as a first class citizen and handles all the ugly bits like currencies and formatting.",
   "language": "en-US",
   "authors": [ "Rémy van Duijkeren" ],
-  "copyright": "Copyright 2014-2016",
+  "copyright": "Copyright Rémy van Duijkeren",
   "packOptions": {
     "projectUrl": "http://www.nodamoney.org/",
     "tags": [ "Noda", "Money", "Currency", "ExchangeRate" ],
@@ -17,20 +17,23 @@
     }
   },
   "dependencies": {
-    "NETStandard.Library": "1.6.0",
     "Newtonsoft.Json": "9.0.1"
   },
-
+  "buildOptions": {
+    "xmlDoc": true
+  },
   "frameworks": {
     "netstandard1.6": {
       "imports": "dnxcore50",
       "dependencies": {
+        "NETStandard.Library": "1.6.0",
         "System.Runtime.Serialization.Primitives": "4.1.1",
         "System.Xml.XmlSerializer": "4.0.11"
       }
     },
     "netstandard1.0": {
       "dependencies": {
+        "NETStandard.Library": "1.6.0",
         "System.Runtime.Serialization.Primitives": "4.1.1",
         "System.Xml.XmlSerializer": "4.0.11"
       }
