--- a/src/NodaMoney/project.json
+++ b/src/NodaMoney/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-beta0000",
+  "version": "1.0.0",
   "title": "NodaMoney",
   "description": "NodaMoney provides a library that treats Money as a first class citizen and handles all the ugly bits like currencies and formatting.",
   "language": "en-US",
@@ -17,6 +17,7 @@
     }
   },
   "dependencies": {
+    "NETStandard.Library": "1.6.1",
     "Newtonsoft.Json": "9.0.1"
   },
   "buildOptions": {
@@ -26,14 +27,14 @@
     "netstandard1.6": {
       "imports": "dnxcore50",
       "dependencies": {
-        "NETStandard.Library": "1.6.0",
-        "System.Runtime.Serialization.Primitives": "4.1.1",
-        "System.Xml.XmlSerializer": "4.0.11"
+        "NETStandard.Library": "1.6.1",
+        "System.Runtime.Serialization.Primitives": "4.3.0",
+        "System.Xml.XmlSerializer": "4.3.0"
       }
     },
     "netstandard1.0": {
       "dependencies": {
-        "NETStandard.Library": "1.6.0",
+        "NETStandard.Library": "1.6.1",
         "System.Runtime.Serialization.Primitives": "4.1.1",
         "System.Xml.XmlSerializer": "4.0.11"
       }
@@ -48,6 +49,10 @@
       "frameworkAssemblies": {
         "System.Runtime.Serialization": "",
         "System.Xml": ""
+      },
+      "dependencies": {
+        "System.Runtime.Serialization.Primitives": "4.3.0",
+        "System.Xml.XmlSerializer": "4.3.0"
       }
     },
     ".NETPortable,Version=v4.5,Profile=Profile259": {
@@ -57,6 +62,10 @@
       "frameworkAssemblies": {
         "System.Runtime.Serialization": "",
         "System.Xml": ""
+      },
+      "dependencies": {
+        "System.Runtime.Serialization.Primitives": "4.3.0",
+        "System.Xml.XmlSerializer": "4.3.0"
       }
     }
     //".NETPortable,Version=v4.0,Profile=Profile328": {
