--- a/src/NodaMoney/project.json
+++ b/src/NodaMoney/project.json
@@ -16,67 +16,49 @@
       "url": "https://github.com/remyvd/NodaMoney"
     }
   },
-  "dependencies": {
-    "NETStandard.Library": "1.6.1",
-    "Newtonsoft.Json": "9.0.1"
-  },
   "buildOptions": {
     "xmlDoc": true
   },
+  "dependencies": {
+    "Newtonsoft.Json": "9.0.1"
+  },
   "frameworks": {
     "netstandard1.6": {
-      "imports": "dnxcore50",
       "dependencies": {
-        "NETStandard.Library": "1.6.1",
-        "System.Runtime.Serialization.Primitives": "4.3.0",
-        "System.Xml.XmlSerializer": "4.3.0"
+        "System.Diagnostics.Tools": "4.3.0"
       }
     },
     "netstandard1.0": {
       "dependencies": {
-        "NETStandard.Library": "1.6.1",
-        "System.Runtime.Serialization.Primitives": "4.1.1",
-        "System.Xml.XmlSerializer": "4.0.11"
+        "System.Diagnostics.Tools": "4.3.0",
+        "System.Xml.XmlSerializer": "4.3.0"
       }
     },
     "net40": {
       "frameworkAssemblies": {
-        "System.Runtime.Serialization": "",
-        "System.Xml": ""
+        "System.Runtime.Serialization": "4.0.0",
+        "System.Xml": "4.0.0"
       }
     },
     "net45": {
       "frameworkAssemblies": {
-        "System.Runtime.Serialization": "",
-        "System.Xml": ""
-      },
-      "dependencies": {
-        "System.Runtime.Serialization.Primitives": "4.3.0",
-        "System.Xml.XmlSerializer": "4.3.0"
+        "System.Runtime.Serialization": "4.0.0",
+        "System.Xml": "4.0.0"
       }
     },
     ".NETPortable,Version=v4.5,Profile=Profile259": {
       "buildOptions": {
         "define": [ "PORTABLE" ]
+      }
+    },
+    ".NETPortable,Version=v4.0,Profile=Profile328": {
+      "buildOptions": {
+        "define": [ "PORTABLE40" ]
       },
       "frameworkAssemblies": {
-        "System.Runtime.Serialization": "",
-        "System.Xml": ""
-      },
-      "dependencies": {
-        "System.Runtime.Serialization.Primitives": "4.3.0",
-        "System.Xml.XmlSerializer": "4.3.0"
-      }
+          "System.Runtime.Serialization": "2.0.5",
+          "System.Xml": "2.0.5"
+        }
     }
-    //".NETPortable,Version=v4.0,Profile=Profile328": {
-    //  "buildOptions": {
-    //    "define": [ "PORTABLE40" ]
-    //  },
-    //  "frameworkAssemblies": {
-    //    "System.Runtime.Serialization": "",
-    //    "System.Xml": "",
-    //    "System": ""
-    //  }
-    //}
   }
 }
