--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@
 #      general configuration      #
 #---------------------------------#
 version: '{build}-{branch}'
-os: Visual Studio 2015
+image: Visual Studio 2017
 branches:
   except:
     - gh-pages
